template events updated

--- a/1-DOM/4-Events/index.html
+++ b/1-DOM/4-Events/index.html
@@ -1,38 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Events</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
-    <div class="green">Click</div>
-    <div class="red">Click</div>
-    <div class="yellow">Hover</div>
-    <form class="login">
-      <div class="user-email">
-        <label for="email">Email:</label>
-        <input type="text" id="email" name="email" />
-      </div>
-
-      <div class="user-password">
-        <label for="password">Password:</label>
-        <input type="text" id="password" name="password" />
-      </div>
-      <button type="submit">Submit</button>
-    </form>
-    <div class="container">
-      <span class="left">&larr;</span>
-      <span class="right">&rarr;</span>
-      <img src="img/thira.jpg" alt="" />
-      <img src="img/kobenhavn.jpg" alt="" />
-      <img src="img/lake_thun.jpg" alt="" />
-      <img src="img/beach.jpg" alt="" />
-      <img src="img/skopje.jpg" alt="" />
-      <img src="img/hamburg.jpg" alt="" />
-    </div>
-    <script src="index.js"></script>
-    <script src="carousel.js"></script>
-  </body>
+  <body></body>
 </html>
