--- a/1-DOM/2-Manipulating/index.html
+++ b/1-DOM/2-Manipulating/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css"/> 
     <title>Document</title>
 
     <style>
@@ -51,8 +51,6 @@
 
     </footer>
 
-    <script src="index.js">
-
-    </script>
+    <script src="index.js"></script>
 </body>
 </html>
