--- a/1-DOM/5-Event Delegation/index.html
+++ b/1-DOM/5-Event Delegation/index.html
@@ -2,52 +2,63 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./style.css" />
-    <title>Password Generator</title>
+    <title>Tree menu</title>
+    <style>
+      .tree span:hover {
+        font-weight: bold;
+      }
+
+      .tree span {
+        cursor: pointer;
+      }
+    </style>
+    <meta charset="utf-8" />
   </head>
 
   <body>
-    <div class="container">
-      <div id="output" class="text-center">&nbsp;</div>
-
-      <form id="password-form">
-        <div class="row">
-          <div class="col-lg-6">
-            <input
-              type="number"
-              class="form-control"
-              id="length"
-              value="20"
-              required
-            />
-          </div>
-          <div class="col-lg-6">
-            <div class="custom-control custom-checkbox">
-              <input
-                type="checkbox"
-                class="custom-control-input"
-                id="mixedCases"
-                checked
-              />
-              <label class="custom-control-label text-left" for="mixedCases"
-                >Use mixed cases?</label
-              >
-            </div>
-          </div>
-        </div>
-
-        <button type="submit" class="btn btn-success" id="btn-generate">
-          Generate password!
-        </button>
-      </form>
-    </div>
+    <ul class="tree" id="tree">
+      <li>
+        Animals
+        <ul>
+          <li>
+            Mammals
+            <ul>
+              <li>Cows</li>
+              <li>Donkeys</li>
+              <li>Dogs</li>
+              <li>Tigers</li>
+            </ul>
+          </li>
+          <li>
+            Other
+            <ul>
+              <li>Snakes</li>
+              <li>Birds</li>
+              <li>Lizards</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <li>
+        Fishes
+        <ul>
+          <li>
+            Aquarium
+            <ul>
+              <li>Guppy</li>
+              <li>Angelfish</li>
+            </ul>
+          </li>
+          <li>
+            Sea
+            <ul>
+              <li>Sea trout</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
   </body>
 </html>
