events first part

--- a/1-DOM/4-Events/index.html
+++ b/1-DOM/4-Events/index.html
@@ -3,7 +3,28 @@
   <head>
     <title>Events</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body></body>
+  <body>
+    <div class="green">Click</div>
+    <div class="red">Click</div>
+    <div class="blue">Click</div>
+    <div class="yellow">Hover</div>
+    <!-- form -->
+    <form class="login">
+      <div class="user-email">
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email" required />
+      </div>
+
+      <div class="user-password">
+        <label for="password">Password:</label>
+        <input type="text" id="password" name="password" />
+      </div>
+      <button type="submit">Submit</button>
+    </form>
+    <!-- form -->
+    <script src="index.js"></script>
+  </body>
 </html>
