--- a/1-DOM/4-Events/index.html
+++ b/1-DOM/4-Events/index.html
@@ -25,6 +25,19 @@
       <button type="submit">Submit</button>
     </form>
     <!-- form -->
+
+    <!-- carousel -->
+    <div class="container">
+      <span class="left">&larr;</span>
+      <span class="right">&rarr;</span>
+      <img src="img/thira.jpg" alt="" />
+      <img src="img/kobenhavn.jpg" alt="" />
+      <img src="img/lake_thun.jpg" alt="" />
+      <img src="img/beach.jpg" alt="" />
+      <img src="img/skopje.jpg" alt="" />
+      <img src="img/hamburg.jpg" alt="" />
+    </div>
+    <!-- carousel -->
     <script src="index.js"></script>
     <script src="carousel.js"></script>
   </body>
