--- a/3-Asynchronous Programming/3-fetch() getting data/index.html
+++ b/3-Asynchronous Programming/3-fetch() getting data/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    
+    <h2 id="countryName"></h2>
+    <div id="area"></div>
+    <div id="population"></div>
+    <img id="img"/>
+    <input type="text" id="country"/>
+    <div id="btn">search</div>
     <script src="index.js"></script>
 </body>
 </html>
